test_suite/tests/ui/conflict/from-from-str.stderr
error: #[serde(from = "...")] and #[serde(from_str)] conflict with each other
 --> $DIR/from-from-str.rs:4:1
  |
4 | / #[serde(from = "u64", from_str)]
5 | | struct S {
6 | |     a: u8,
7 | | }
  | |_^
